--- a/Html/carro.html
+++ b/Html/carro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt/br">
 
 <head>
     <title>Title</title>
@@ -34,7 +34,7 @@
                         <div class="carousel-caption text-start">
                             <h1>Example headline.</h1>
                             <p>Some representative placeholder content for the first slide of the carousel.</p>
-                            <p><<a class="btn btn-lg btn-primary" href="#">Sign up today</a>></p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
                         </div>
                     </div>
                 </div>
